--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 小蝦米
 subtitle: 蝦米工作室创始人
 welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
-description: Vno Jekyll is a port of my Ghost theme vno.
+description: Welcome to our blog.
 creator: <a href="http://onev.cat">@onevcat</a>
 
 url: "http://vno.onevcat.com"
