--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic
 title: 小蝦米
 subtitle: 蝦米工作室创始人
-welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
-description: Welcome to our blog.
+welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank"></a>
+description: Attitude decides everything, details determine success or failure.<br>态度决定一切，细节决定成败.
 creator: <a href="http://onev.cat">@onevcat</a>
 
 url: "http://vno.onevcat.com"
