--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic
 title: 小蝦米
 subtitle: 蝦米工作室创始人
-welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank"></a>
-description: Attitude decides everything, details determine success or failure.<br>态度决定一切，细节决定成败.
+welcome_message: Every one simple thing, is not simple,To do each common thing, is not trivial.<br>把每一件简单的事情做好,就是不简单.把每一件平凡的事情做好，就是不平凡.
+description: Attitude decides everything, details determine success or failure.<br>态度决定一切,细节决定成败.
 creator: <a href="http://onev.cat">@onevcat</a>
 
 url: "http://vno.onevcat.com"
