--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ blog_button:
 
 # Navigation buttons in the front page.
 nav:
-    - {title: Projects, description: My Projects, url: 'http://project.onevcat.com'}
+    - {title: GangHood, description: 蝦米江湖, url: 'http://ganghood.lofter.com/'}
     # - {title: Another Button, description: A button, url: 'http://example.com'}
 
 # Pagination
